vlib/v/checker/tests/assign_expr_type_err_f.out
vlib/v/checker/tests/assign_expr_type_err_f.vv:3:9: error: invalid right operand: int -= bool
    1 | fn main() {
    2 |     mut foo := 10
    3 |     foo -= false
      |            ~~~~~
    4 | }
