vlib/v/checker/tests/assign_expr_type_err_f.vv
fn main() {
	mut foo := 10
	foo -= false
	_ = foo
}
